Add PUT Mapping, Change Body reading